# softwaretrace-ostools

./: .gitlab-ci.yml  LICENSE  Makefile  README.md  common.mk  move_freebsd_packages.csh  move_freebsd_packages.sh  move_linux_packages.sh  publish_rpms.sh
.circleci/: config.yml.sav
.githooks/hooks/: pre-commit
.github/workflows/: ostools.yml  process_management.yml  process_management_fedora.yml  system_management.yml  system_management_fedora.yml
.gitlab-ci/: build_packages.yml  containers.yml  lint.yml  pages.yml  publish.yml  sanity.yml  xxx.yml
build_containers/: README.md  create_containers.sh  package_map.sh
build_containers/archlinux/: Dockerfile
build_containers/fedora42/: Containerfile  Dockerfile
build_containers/rhel10/: Containerfile
build_containers/utils/: 95_swtr_containers_prune.preset  install_service.sh  remove_service.sh  swtr_clear_container_cache.sh  swtr_containers_prune.service_docker  swtr_containers_prune.service_podman  swtr_containers_prune.timer
build_vms/: README.md  create_imgagefile.sh
build_vms/archlinux/: README.md  archlinux_qcow2.pkr.hcl  archlinux_vsphere.pkr.hcl  cleanup.sh  create_archlinux.sh  create_archlinux_qcow2.sh  install_p1.sh  install_pkgs.sh
build_vms/archlinux/files/: create_archlinux.sh  install_pkgs.sh  required_pkgs.sh  setup_grub.sh  setup_install_ssh_keys.sh  setup_nfsmounts.sh  setup_phase_1.sh  setup_umount_fs.sh  update_etc_issue.sh
build_vms/freebsd/: README.md  cleanup.sh  create_freebsd.sh  create_freebsd_qcow2.sh  freebsd14srv_vsphere.pkr.hcl  freebsd_qcow2.pkr.hcl  gitlab_runner  gitlabrunner.csh  pkg_install.csh  register_gitlab_runner.csh
build_vms/freebsd/auto_master.d/: qnap02.map
build_vms/freebsd/nfssettings/: auto_master  rc.conf  rc_conf_setup.csh  setupautomounts.csh  setupautomounts.sh
build_vms/nfs_shares/: autofs.qnap02  qnap02.autofs
doc/childmgt_c/html/: annotated.html  annotated_dup.js  building__and__packaging_8md.html  building__and__packaging_8md_source.html  child__management_8md.html  child__management_8md_source.html  classes.html  compiler__info_8md.html  compiler__info_8md_source.html  count__children_8c.html  count__children_8c_source.html  demo__001_8c.html  demo__001_8c.js  demo__001_8c_source.html  demo__002_8c.html  demo__002_8c.js  demo__002_8c_source.html  demo__003_8c.html  demo__003_8c.js  demo__003_8c_source.html  dir_15c994a188bb532988a682ed3590b69a.html  dir_15c994a188bb532988a682ed3590b69a.js  examples_8md.html  (+66 more)
libreoffice/: Home_Lab.odg
local_repo_templates/: sfwtrace.conf.archlinux.template  sfwtrace.conf.freebsd.template
processmanagment/: Makefile
processmanagment/os/: Makefile  lint_code.sh  requirements.txt
processmanagment/os/c_cpp/: CMakeCache.txt  CMakeLists.txt  ChangeLog_master  Description.txt  Doxyfile_childmgt  Doxyfile_childmgt_c  Doxyfile_childmgt_cpp  Makefile  Makefile_doc  Makefile_packages  Makefile_rpms  README.md  building_and_packaging.md  building_commands.txt  child_management.md  compiler_info.md  create_readme.sh  examples.md  install_manifest.txt  mainpage.md  make_swtrprocmgtutils_archlinux.mk  make_swtrprocmgtutils_rpm.mk  make_swtrstrlib_archlinux.mk  make_swtrstrlib_deb.mk  make_swtrstrlib_rpm.mk  make_swtrstrlib_ubuntu_deb.mk  version.mk
processmanagment/os/c_cpp/archpkg_templates/: PKGBUILD.proto  PKGBUILD_swtrprocmgtdemo.proto  PKGBUILD_swtrprocmgtlib.proto  PKGBUILD_swtrprocmgtutils.proto  PKGBUILD_swtrstrlib.proto
processmanagment/os/c_cpp/debbuild/SOURCES/: softwaretrace-ostools-src_0.9.0.0.2_orig.tar.xz
processmanagment/os/c_cpp/debbuild/swtrstrlib-0.9.0.0.2/: Makefile_doc  Makefile_packages  make_swtrstrlib_ubuntu_deb.mk
processmanagment/os/c_cpp/debbuild/swtrstrlib-0.9.0.0.2/debian/: README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
processmanagment/os/c_cpp/debbuild/swtrstrlib-0.9.0.0.2/src_c/: count_children.c  freebsd_count_children.c  getprocstat.c  reapzombie_status.c  swtrstrlib.h
processmanagment/os/c_cpp/spec_template/: swtrprocmgtutils.spec.tmpl  swtrsrtlib.spec.tmpl  swtrstrlib.spec.tmpl
processmanagment/os/c_cpp/src_c/: count_children.c  freebsd_count_children.c  freebsd_reapzombie_status.c  getmaxpid.c  getprocstat.c  init_ctrl.c  lremove_char.c  reapzombie_status.c  remove_char.c  rremove_char.c  set_kernel_version.c  swtrcommon.h  swtrpocmgt.h  swtrprocmgt.h  swtrstrlib.h  test_1.c
processmanagment/os/c_cpp/src_demo_c/: demo_001.c  demo_002.c  demo_003.c
processmanagment/os/c_cpp/swtrstrlib/: CMakeLists.txt  Description.txt  Makefile_packages  make_swtrstrlib_ubuntu_deb.mk
processmanagment/os/c_cpp/swtrstrlib/.bzr/branch/: branch.conf  last-revision  tags
processmanagment/os/c_cpp/swtrstrlib/.bzr/checkout/: dirstate
processmanagment/os/c_cpp/swtrstrlib/.bzr/repository/: pack-names
processmanagment/os/c_cpp/swtrstrlib/debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  menu.ex  package.default.ex  rules  swtrstrlib1.dirs  watch.ex
processmanagment/os/c_cpp/swtrstrlib/debian/source/: lintian-overrides~
processmanagment/os/c_cpp/swtrstrlib/src_c/: getprocstat.c  lremove_char.c  swtrstrlib.h
processmanagment/os/c_cpp/swtrstrlib_save/: CMakeLists.txt
processmanagment/os/c_cpp/swtrstrlib_save/.bzr/branch/: last-revision  tags
processmanagment/os/c_cpp/swtrstrlib_save/.bzr/checkout/: dirstate
processmanagment/os/c_cpp/swtrstrlib_save/.bzr/repository/: pack-names
processmanagment/os/c_cpp/swtrstrlib_save/debian/: README.Debian  control  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  rules  shlibs.local.ex  swtrstrlib-dev.dirs  swtrstrlib-dev.install  swtrstrlib.cron.d.ex  swtrstrlib.doc-base.EX  swtrstrlib1.install
processmanagment/os/c_cpp/swtrstrlib_save/debian/source/: lintian-overrides
processmanagment/os/c_cpp/swtrstrlib_save/src_c/: count_children.c  init_ctrl.c  reapzombie_status.c  rremove_char.c  set_kernel_version.c  swtrpocmgt.h  swtrstrlib.h
system_management/: Makefile
(+82 files in other folders)
